--- a/index.html
+++ b/index.html
@@ -181,7 +181,11 @@
                 <i class="fa-brands fa-telegram"></i>
                 <i class="fa-brands fa-pinterest"></i>
                 <i class="fa-brands fa-linkedin"></i>
+                
+            <div class="footer__policy-text">
                 <p class="footer__policy-text"> Power by accesstrade </p>
+            </div>
+               
             </div>
         </div>
     </div>
