--- a/index.html
+++ b/index.html
@@ -175,17 +175,16 @@
 
         <!-- Footer -->
         <div id="footer">
-            <div class="footer__icon">
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-telegram"></i>
-                <i class="fa-brands fa-pinterest"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                
+            <div class="social-list">
+                <i class="footer__icon fa-brands fa-instagram"></i>
+                <i class="footer__icon fa-brands fa-facebook"></i>
+                <i class="footer__icon fa-brands fa-telegram"></i>
+                <i class="footer__icon fa-brands fa-pinterest"></i>
+                <i class="footer__icon fa-brands fa-linkedin"></i>
+            </div>
+
             <div class="footer__policy-text">
                 <p class="footer__policy-text"> Power by accesstrade </p>
-            </div>
-               
             </div>
         </div>
     </div>
